fix layout issue

--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -15,7 +15,7 @@
   box-shadow: 0 0px 9px -3px grey;
 
   h1{
-    color: $mandarin;
+    color: $orange-red;
     // font-family: 'Bree Serif', serif;
     font-family: 'Pacifico', cursive;
     // font-family: 'Rokkitt', serif;
