--- a/src/component/header/right-nav.scss
+++ b/src/component/header/right-nav.scss
@@ -20,7 +20,7 @@
         span{
             margin: 0 4rem;
             font-size: 6rem;
-            color: $mandarin;
+            color: $orange-red;
             &:hover{
                 color: $silver;
             }
